--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/core": "^5.0.0-beta.2",
     "@material-ui/icons": "^5.0.0-beta.1",
     "@material-ui/styled-engine-sc": "^5.0.0-beta.1",
+    "@material-ui/styles": "^4.11.4",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
